--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^12.6.0",
     "terser-webpack-plugin": "^5.3.1",
     "three": "^0.129.0",
+    "uuid": "^9.0.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
